--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  transition: 0.3s ease-in-out;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #112031;
+  color: #f8f8f8;
+  font-family: "Urbanist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .App {
+  margin: 50px auto;
+  max-width: 800px;
+  padding: 0 20px;
+}
+
+h1 {
+  color: #80ed99;
+  font-size: 2.5rem;
   text-align: center;
+  margin-bottom: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.phases {
+  border-radius: 10px;
+  width: 100%;
+  background-color: #345b63;
   display: flex;
-  flex-direction: column;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+  flex-wrap: wrap;
+}
+
+.phase {
+  flex: 1;
+  padding: 20px 15px;
+  cursor: pointer;
+  min-width: 180px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.phase:hover,
+.phase.current {
+  background-color: #d4ecdd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.phase:hover h4,
+.phase.current h4 {
+  color: #345b63;
+}
+
+.phase:hover p,
+.phase.current p {
+  color: #345b63;
+}
+
+.phase h4 {
+  font-size: 1.1rem;
+}
+
+.phase p {
+  font-size: 0.9rem;
+  color: #d4ecdd;
+}
+
+.phase:not(:last-child) {
+  border-right: 1px solid #5a9aad;
+}
+
+.giant_timer {
+  width: 100%;
+  margin: 100px auto;
+}
+
+.giant_timer h2 {
+  text-align: center;
+  font-size: 800%;
+}
+
+.btns {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+  justify-content: center;
+}
+
+.btns div {
+  flex: 1;
+  border-radius: 8px;
+  padding: 20px 15px;
+  text-align: center;
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.btns p {
+  font-size: 1.2rem;
+}
+
+.btns div i {
+  font-size: 2rem;
+}
+
+.btn_start {
+  background-color: #38a3a5;
+}
+
+.btn_pause {
+  background-color: #4b6587;
+}
+
+.btn_redo {
+  background-color: #93b5c6;
+}
+
+@media screen and (max-width: 600px) {
+  .phase:not(:last-child) {
+    border-right: none;
+    border-bottom: 1px solid #5a9aad;
   }
 }
