--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+a,
+a:hover {
+  color: inherit;
+}
+
 .App {
   margin: 50px auto;
   max-width: 800px;
@@ -39,6 +44,7 @@ h1 {
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
   overflow: hidden;
   flex-wrap: wrap;
+  margin-bottom: 30px;
 }
 
 .phase {
@@ -129,6 +135,11 @@ h1 {
 
 .btn_redo {
   background-color: #93b5c6;
+}
+
+.footer {
+  text-align: center;
+  color: #4b6587;
 }
 
 @media screen and (max-width: 600px) {
