--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,8 +15,9 @@ html {
 }
 
 body {
-  font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #f4f4f4;
   color: #121212;
 }
+
