--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -17,8 +18,17 @@ html {
 body {
   font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #f4f4f4;
+  background-color: #FEF5ED;
   color: #121212;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Vollkorn";
 }
 
 html,
