--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,10 +15,16 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body,
+#root {
+  min-height: 100vh;
+}
+
 body {
   font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #FEF5ED;
+  background-color: #fef5ed;
   color: #121212;
 }
 
@@ -28,11 +34,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Vollkorn";
-}
-
-html,
-body,
-#root {
-  min-height: 100vh;
+  font-family: "Vollkorn", Cambria, Cochin, Georgia, Times, "Times New Roman",
+    serif;
 }
