--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;600;700&display=swap");
+@import "./general-sans.css";
 
 * {
   box-sizing: border-box;
@@ -22,18 +21,8 @@ body,
 }
 
 body {
-  font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #fef5ed;
+  font-family: "GeneralSans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #fafafa;
   color: #121212;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Vollkorn", Cambria, Cochin, Georgia, Times, "Times New Roman",
-    serif;
 }
