feat: dnd for timers; en/fr locales

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -61,3 +61,16 @@ body {
     width: 200px;
   }
 }
+
+.Toastify__close-button--light {
+  opacity: 1;
+  color: #fff;
+}
+
+.Toastify__toast {
+  font-family: inherit;
+}
+
+.Toastify__progress-bar-theme--light {
+  background: #fff;
+}
