--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
 
 * {
   box-sizing: border-box;
@@ -21,45 +20,11 @@ body,
 }
 
 body {
-  font-family: "Inter", Arial, Roboto, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Plus Jakarta Sans", Arial, Roboto, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   background-color: #fafafa;
   color: #121212;
-}
-
-[data-tooltip] {
-  cursor: pointer;
-
-  &::after {
-    content: attr(data-tooltip);
-    font-size: 0.75rem;
-    color: #121212;
-    background-color: #fafafa;
-
-    position: absolute;
-    top: calc(100% + 5px);
-    right: 10px;
-
-    // background-color: #fafafa;
-
-    padding: 5px 10px;
-    height: 0;
-    width: 0;
-
-    border-radius: 3px;
-    border: 1px solid #121212;
-    overflow: hidden;
-
-    opacity: 0;
-    transition: 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
-  }
-
-  &:hover::after {
-    height: max-content;
-    opacity: 1;
-    width: 200px;
-  }
 }
 
 .Toastify__close-button--light {
